--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,19 +6,23 @@
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-/* comment here */
+/* Add header here */
 header {
   display: flex;
   background-color: #1A5276;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0px;
+  z-index: 1;
   padding: 10px 20px 10px 0px;
   }
 header h1 {
   font-weight: bold;
   font-size: 20px;
-  margin: 0;
+  margin: 10px 10px 10px 0;
   padding: 7px 5px;
   width: 30%;
   background-color:#cc0099;
@@ -63,12 +67,13 @@ header nav ul li a {
   padding: 7px 5px;
   background-color:#cc0099;
   text-align: center;
-  width: 20%;
+  width: auto%;
   height: 30px;
   top: 80px;
   right: 0;
 }
-/* Experience styles begin */
+/* Hero End */
+/* Experience Styles Begin */
 .experience {
   background: #e5e7e9;
   color: #1a5276;
@@ -81,7 +86,7 @@ header nav ul li a {
   color: #1a5276;
 }
 .experience-grid-container {
-  width: 80%;
+  width: 90%;
   display: grid;
   grid-gap: 20px;
   align-items: stretch;
@@ -95,7 +100,9 @@ header nav ul li a {
   border-right: 2px solid #1a5276;
   text-align: right;
 }
-/* specific match */
+/* Experience Styles End */
+/* Grid Layout Specific Match */
+/* Sidebar */
 .experience-grid-item-about {
   grid-row: 1 / span 1;
   grid-column: 1 / span 1;
@@ -117,6 +124,7 @@ header nav ul li a {
   grid-row: 6 / span 1;
   padding-right: 10px;
 }
+/* About Me Grid Formatting */
 .about1 {
   grid-column: 2 / span 1;
   grid-row: 1 / span 1;
@@ -132,86 +140,91 @@ header nav ul li a {
   align-self: center;
   justify-self: center;
 }
+/* Work Experience Grid Formatting */
 .work1 {
   grid-column: 2 / span 2;
   grid-row: 2 / span 2;
   }
 .work1 img {
-  width: 100%;
   height: 100%;
+  width: 100%;
   object-fit: cover;
-  display: block;
-}
-/* Bottom left text */
-.text-block-run-buddy {
-  font-weight: bold;
-  font-size: 10px;
-  margin: 0;
-  padding: 2px 2px;
-  width: 25%;
-  background-color: #cc0099;
-  color: #1a5276;
 }
 .work2 {
   grid-column: 2 / span 1;
   grid-row: 4 / span 1;
 }
 .work2 img {
-  width: 100%;
   height: 100%;
+  width: 100%;
   object-fit: cover;
-  display: block;
-  back
-  url("https://mofletch.github.io/Code-Refactor/");
 }
 .work3 {
   grid-column: 3 / span 1;
   grid-row: 4 / span 1;
 }
 .work3 img {
-  width: 100%;
   height: 100%;
-  object-fit: cover;
+  width: auto;
   display: block;
+  object-fit: cover;
 }
 .work4 {
   grid-column: 4 / span 1;
   grid-row: 2 / span 1;
 }
 .work4 img {
-  width: 100%;
   height: 100%;
+  width: 100%;
   object-fit: cover;
-  display: block;
 }
 .work5 {
   grid-column: 4 / span 1;
   grid-row: 3 / span 1;
 }
 .work5 img {
-  width: 100%;
   height: 100%;
+  width: 100%;
   object-fit: cover;
-  display: block;
 }
+/* Work Image Text Box Overlay Formatting */
+.background-image {
+  position: relative;
+}
+.text-block {
+  font-weight: bold;
+  font-size: 15px;
+  margin: 10px 10px 10px 0;
+  padding: 5px 5px;
+  width: auto;
+  background-color: #cc0099;
+  color: #1a5276;
+  position: absolute;
+}
+.bottom-left {
+  display: flex;
+  align-items: flex-end;
+  justify-content: left;
+}
+ /* Contact Me Grid Formatting */ 
 .phone {
   grid-column: 2 / span 1;
   grid-row: 5 / span 1;
-  font-size: 20px;
+  font-size: 18px;
   align-self: center;
   justify-self: center;
 }
 .biz-email {
   grid-column: 3 / span 1;
   grid-row: 5 / span 1;
-  font-size: 20px;
+  font-size: 18px;
   align-self: center;
   justify-self: center;
 }
 .biz-git {
   grid-column: 4 / span 1;
   grid-row: 5 / span 1;
-  font-size: 20px;
+  font-size: 18px;
   align-self: center;
   justify-self: center;
 }
@@ -222,3 +235,56 @@ header nav ul li a {
   justify-self: center;
   font-size: 20px;
 }
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+  header nav {
+    width: 100%;
+    justify-content: left;
+    position: relative;
+  }
+  header h1 {
+    font-size: 20px;
+    text-align: center;
+    margin: 10px 10px;
+    padding: 7px 7px;
+    width: 100%;
+    }
+  header nav ul li a {
+    font-size: 15px;
+    }
+  .hero {
+    padding: 0;
+    }
+  .hero h2 {
+    font-size: 12px;
+  }
+  .experience {
+      padding: 0px 15px;
+    }
+  }
+  .text-block {
+    font-size: 12px;
+    }
+  }
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+    .about2 {
+      font-size: 15px;
+    }
+  }
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 575px) {
+    header nav ul li a {
+      margin: 10px;
+    }
+    .phone {
+      font-size: 12px;
+    }
+    .biz-email {
+      font-size: 12px;
+    }
+    .biz-git {
+      font-size: 12px;
+    }
+  }
