--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ header nav ul li a {
   background-color: #e5e7e9;
   width: 100%;
   justify-content: center;
+  padding: 20px;
 }
 .grid-container {
   display: grid;
@@ -197,8 +198,10 @@ header nav ul li a {
 .title {
   font-size: 30px;
   font-weight: bold;
-  justify-self: flex-end;
   padding: 0 15px 0 0;
+  display: flex;
+  justify-self: flex-end;
+  text-align: right;
 }
 .copydata {
   justify-self: center;
@@ -269,8 +272,9 @@ header nav ul li a {
     .title {
       padding: 20px 0 10px 0;
       margin: 0 0 10px 0;
-      text-align: center;
       border-bottom: 5px solid #1a5276;
+      text-align: center;
+      justify-content: center;
     }
     .copy {
       text-align: center;
